crates/forge_app/src/snapshots/forge_app__operation__tests__prompt_undo_multiple_files.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<prompt_undo
  status="restored"
  restored_count="3"
>Restored 3 file(s) to their state before the last prompt: /home/user/file1.txt, /home/user/file2.rs, /home/user/file3.toml
</prompt_undo>
