crates/forge_app/src/snapshots/forge_app__operation__tests__prompt_undo_no_changes.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<prompt_undo
  status="no_changes"
>No file changes found for the last prompt.
</prompt_undo>
