crates/forge_app/src/snapshots/forge_app__operation__tests__prompt_undo_single_file.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<prompt_undo
  status="restored"
  restored_count="1"
>Restored 1 file(s) to their state before the last prompt: /home/user/test.txt
</prompt_undo>
