crates/forge_app/src/snapshots/forge_app__operation__tests__shell_output_empty_streams.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<shell_output
  command="silent_command"
  shell="/bin/bash"
  exit_code="0"
  wall_time_secs="0.05"
>
</shell_output>
